feat: add New Zealand processing times
